yaml/esgateway-stage-en.svc.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: esgateway-stage-en
spec: 
  ports:
  - port: 3000
    targetPort: 3000
  selector: 
    app: esgateway-stage-en
